--- a/prueba.ui
+++ b/prueba.ui
@@ -14,105 +14,14 @@
    <string>MainWindow</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <widget class="QTableWidget" name="tablaFCFS">
+   <widget class="QPlainTextEdit" name="areaDeTexto">
     <property name="geometry">
      <rect>
-      <x>10</x>
-      <y>70</y>
-      <width>256</width>
-      <height>331</height>
-     </rect>
-    </property>
-    <property name="columnCount">
-     <number>2</number>
-    </property>
-    <column>
-     <property name="text">
-      <string>ID</string>
-     </property>
-    </column>
-    <column>
-     <property name="text">
-      <string>Porcentaje</string>
-     </property>
-    </column>
-   </widget>
-   <widget class="QPushButton" name="btnI2">
-    <property name="geometry">
-     <rect>
-      <x>220</x>
+      <x>30</x>
       <y>20</y>
-      <width>101</width>
-      <height>23</height>
+      <width>741</width>
+      <height>441</height>
      </rect>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">background-color: rgb(85, 170, 0);</string>
-    </property>
-    <property name="text">
-     <string>Iniciar Multicolas</string>
-    </property>
-   </widget>
-   <widget class="QTableWidget" name="tablaRR">
-    <property name="geometry">
-     <rect>
-      <x>270</x>
-      <y>70</y>
-      <width>256</width>
-      <height>331</height>
-     </rect>
-    </property>
-    <property name="columnCount">
-     <number>2</number>
-    </property>
-    <column>
-     <property name="text">
-      <string>ID</string>
-     </property>
-    </column>
-    <column>
-     <property name="text">
-      <string>Tiempo(s)</string>
-     </property>
-    </column>
-   </widget>
-   <widget class="QTableWidget" name="tablaSJF">
-    <property name="geometry">
-     <rect>
-      <x>540</x>
-      <y>70</y>
-      <width>221</width>
-      <height>331</height>
-     </rect>
-    </property>
-    <property name="columnCount">
-     <number>2</number>
-    </property>
-    <column>
-     <property name="text">
-      <string>ID</string>
-     </property>
-    </column>
-    <column>
-     <property name="text">
-      <string>Tiempo(s)</string>
-     </property>
-    </column>
-   </widget>
-   <widget class="QPushButton" name="btnI3">
-    <property name="geometry">
-     <rect>
-      <x>600</x>
-      <y>20</y>
-      <width>101</width>
-      <height>23</height>
-     </rect>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">background-color: rgb(85, 170, 0);</string>
-    </property>
-    <property name="text">
-     <string>Iniciar JSF</string>
     </property>
    </widget>
   </widget>
