--- a/prueba.ui
+++ b/prueba.ui
@@ -44,7 +44,7 @@
     </attribute>
     <column>
      <property name="text">
-      <string>Proceso</string>
+      <string>Tarea</string>
      </property>
     </column>
    </widget>
@@ -59,7 +59,7 @@
     </property>
     <column>
      <property name="text">
-      <string>Proceso</string>
+      <string>Tarea</string>
      </property>
     </column>
    </widget>
@@ -92,9 +92,9 @@
    <widget class="QProgressBar" name="barra_1">
     <property name="geometry">
      <rect>
-      <x>180</x>
+      <x>220</x>
       <y>130</y>
-      <width>411</width>
+      <width>371</width>
       <height>23</height>
      </rect>
     </property>
@@ -107,12 +107,12 @@
      <rect>
       <x>140</x>
       <y>130</y>
-      <width>31</width>
+      <width>51</width>
       <height>16</height>
      </rect>
     </property>
     <property name="text">
-     <string>Hilo 1</string>
+     <string>Principal</string>
     </property>
    </widget>
    <widget class="QLabel" name="lbIndice_1">
@@ -248,9 +248,9 @@
    <widget class="QProgressBar" name="barra_2">
     <property name="geometry">
      <rect>
-      <x>180</x>
+      <x>220</x>
       <y>200</y>
-      <width>411</width>
+      <width>371</width>
       <height>23</height>
      </rect>
     </property>
@@ -263,12 +263,12 @@
      <rect>
       <x>140</x>
       <y>200</y>
-      <width>31</width>
+      <width>61</width>
       <height>16</height>
      </rect>
     </property>
     <property name="text">
-     <string>Hilo 2</string>
+     <string>Secundario</string>
     </property>
    </widget>
    <widget class="QLabel" name="lbError">
